--- a/config.ini.tmpl
+++ b/config.ini.tmpl
@@ -4,3 +4,88 @@ host="localhost"
 port="3306"
 name="xxx"
 pass="xxx"
+
+[amazon]
+access_key_id=""
+secret_access_key=""
+base_url="http://ecs.amazonaws.jp/onca/xml"
+associate_id=""
+
+[platform]
+PC="1"
+
+Playstation="21"
+Playstation 2="22"
+Playstation 3="23"
+
+Sony PSP="41"
+
+Nintendo Entertainment System="61"
+Family Computer Disk System="62"
+Nintendo Super NES="63"
+Nintendo 64="64"
+Gamecube="65"
+Nintendo Wii="66"
+
+Game Boy="81"
+Game Boy Color="82"
+Game Boy Advance="83"
+Nintendo DS="84"
+
+Neogeo Pocket="101"
+
+Sega Genesis="121"
+Sega Megadrive 32X="122"
+Sega Saturn="123"
+Sega Dreamcast="124"
+
+Sega Game Gear="141"
+
+NEC Core="160"
+
+NEOGEO="180"
+Neo Geo CD="181"
+
+Xbox 360="201"
+
+WonderSwan="221"
+
+[rplatform]
+1="PC"
+
+21="プレステ"
+22="プレステ2"
+23="プレステ3"
+
+41="PSP"
+
+61="ファミコン"
+62="ディスクシステム"
+63="スーパーファミコン"
+64="N64"
+65="ゲームキューブ"
+66="Wii"
+
+81="ゲームボーイ"
+82="ゲームボーイカラー"
+83="ゲームボーイアドバンス"
+84="DS"
+
+101="ネオジオポケット"
+
+121="メガドライブ"
+122="メガCD"
+123="サターン"
+124="ドリームキャスト"
+
+141="ゲームギア"
+
+160="PCエンジン"
+
+180="ネオジオ"
+181="ネオジオCD"
+
+201="Xbox 360"
+
+221="ワンダースワン"
+
